k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-deploy
  namespace: git-action
spec:
  replicas: 3
  selector:
    matchLabels:
      app: git-app
  template:
    metadata:
      labels:
        app: git-app
    spec:
      containers:
      - name: git-container
        image: prajwaldevops1027/app:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "250Mi"
          limits:
            cpu: "512m"
            memory: "512Mi"
