k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: services-app
  namespace: git-action
spec:
  type: ClusterIP
  selector:
    app: git-app
  ports:
  - port: 80
    targetPort: 8080
